For a documentation of all features, see http://semantic-mediawiki.org

== Semantic MediaWiki 1.1.1 ==

* Improved iCalendar support: more efficient processing, better heuristic 
  for giving dates, formatting bugfixes
* Bugfix for Special:SearchByProperty (form-based serach failed)
* Minor bugfixes for RSS generation
* Bugfix for Special_Ask in MediaWiki 1.11 with template formatting

== Semantic MediaWiki 1.1 ==

* Support for formatted results on Special:Ask. "Further results" links
  from inline queries now preserve format.
* New iCalendar export for inline queries (format=icalendar)
* Query results can now be sorted by more than one property (just separate
  property names with "," in sort parameter)
* Initial support (beta) for synching external RDF stores with SMW. 
  This also provides support for wiki-based SPARQL query services, see 
  http://semantic-mediawiki.org/wiki/Help:SPARQL_endpoint
* More robust link generation code; even long query texts and links 
  that contain very special characters are built properly.
* Extended translations. Completely new Arab translation.
* New SMW registry http://semantic-mediawiki.org/wiki/Special:SMWRegistry
  to replace hand-crafted list of "sites using SMW".
* Various bugfixes. For example:
 ** Enumerated properties (allows value) for Type:Page works now.
 ** Page moves are handled more reliably

== Semantic MediaWiki 1.0.1 ==

* Extended translations, new Italian translation
* minor bugfies, fixed RSS links for long description texts

== Changes in SMW1.0 as compared to SMW0.7 ==

* Simplified semantic annotations: just one kind of annotation ("Property").
* Significant speedup (both server and network load substantially reduced,
  faster RDF export, more efficient query result formatting).
* Prettier and easier to understand interfaces:
  ** New tooltips for warnings and addtional information.
  ** Simplified factbox layout, with all properties in alphabetic order.